--- a/classification.ipynb
+++ b/classification.ipynb
@@ -434,6 +434,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dalam proses Exploratory Data Analysis (EDA) pada kasus klasifikasi, saya tidak menemukan adanya nilai null dan data duplikat. Langkah-langkah ini memberikan kepercayaan bahwa dataset telah bersih dan siap untuk dilanjutkan ke tahap analisis klasifikasi."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -930,6 +937,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Terdapat 52 prediksi yang benar-benar positif (true positives) dan 2 prediksi yang salah positif (false positives).\n",
+    "- Tidak ada prediksi yang salah negatif (false negatives) dan 89 prediksi yang benar-benar negatif (true negatives)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -953,13 +968,6 @@
    "source": [
     "print(classification_report(y_cls_test, y_cls_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
