--- a/regression.ipynb
+++ b/regression.ipynb
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dalam melakukan analisis data awal (EDA) terhadap dataset iklan jaringan sosial, saya menemukan bahwa tidak ada nilai null yang hadir di dalamnya. Selain itu, tidak ada duplikat data yang terdeteksi setelah saya melakukan pemeriksaan awal. Langkah-langkah ini memberikan kepercayaan bahwa dataset telah bersih dan siap untuk dilanjutkan ke tahap analisis regresi."
+    "Dalam melakukan Exploratory Data Analysis, saya menemukan bahwa tidak ada nilai null yang hadir di dalamnya. Selain itu, tidak ada duplikat data yang terdeteksi setelah saya melakukan pemeriksaan awal. Langkah-langkah ini memberikan kepercayaan bahwa dataset telah bersih dan siap untuk dilanjutkan ke tahap analisis regresi."
    ]
   },
   {
